Revert the whitespace fix

--- a/src/styles/ag-grid.scss
+++ b/src/styles/ag-grid.scss
@@ -573,7 +573,7 @@ ag-grid-aurelia {
 }
 
 .ag-layout-normal .ag-body-container {
-    display: block;
+    display: inline-block;
     position: relative;
 }
 
